--- a/style.css
+++ b/style.css
@@ -108,14 +108,15 @@ section{
     padding-top: 30px;
 }
 .half-width{
-    width: 50%;
-    padding-left: 2%;
+    width: 80%;
+    padding-left:5%;
 }
 .half-width img{
-width: 50%;
+width: 80%;
+height: 90%;
 }
 footer{
-    margin-top: 20px;
+    margin-top: 10px;
     text-align: center;
     background-color: black;
     color: aliceblue;
